Split up JavaCompilerService